[package]
name = "cysense"
version = "0.1.0"
edition = "2021"
authors = ["Cybrium AI <hello@cybrium.ai>"]
description = "Passive network sensor — traffic capture, protocol dissection, anomaly detection for IT/OT/IoMT environments"
license = "Apache-2.0"
repository = "https://github.com/cybrium-ai/cysense"
keywords = ["network", "sensor", "ot", "iot", "medical", "hl7", "dicom"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "cysense"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = "2"
etherparse = "0.16"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
